chore: init user model and seeder, and create auth
