# routes/user.route.js
@@ -1,7 +1,14 @@
-// const userController = require("../controllers/user.controller");
+const authController = require("../controllers/auth.controller");
+const adminController = require("../controllers/admin.controller");
+const profileController = require("../controllers/profile.controller");
 const router = require("express").Router();
 
-// router.post("/login", userController.login);
-// router.post("/register", userController.register);
+router.post("/auth/login", authController.login);
+router.post("/admin/create", adminController.register);
+router.post("/admin/list", adminController.register);
+router.put("/admin/update", adminController.register);
+router.delete("/admin/delete", adminController.register);
+router.get("/profile", profileController.register);
+router.put("/profile", profileController.register);
 
 module.exports = router;
